apex-chart changes

--- a/assets/pug/pages/template/apex-chart.pug
+++ b/assets/pug/pages/template/apex-chart.pug
@@ -16,8 +16,8 @@
 //- apex-chart
 -var apexChart=true;
 -var customApexChart=true;
--var uniqueApex=true;
--var friendlyApex=true;
+// -var uniqueApex=true;
+// -var friendlyApex=true;
 
 
 //- Breadcrumbs
