--- a/html/template/apex-chart.html
+++ b/html/template/apex-chart.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+
+<!-- -var uniqueApex=true;-->
+<!-- -var friendlyApex=true;--><!DOCTYPE html>
 <html lang="en"> 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -1503,8 +1505,6 @@
 <!-- Apex Chart Js -->
 <script src="../../assets/js/apexchart/apexcharts.js"></script>
 <script src="../../assets/js/apexchart/apex-common.js"></script>
-<script src="../../assets/js/apexchart/unique-custom.js"></script>
-<script src="../../assets/js/apexchart/friendly-custom.js"></script>
 <script src="../../assets/js/apexchart/custom-apex-charts.js"></script>
 <!-- prism js-->
 <script src="../../assets/js/prism.js"></script>
