--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -355,7 +355,7 @@
                   </ul>
                 </div>
                 <ul class="profile-box flex items-center">
-                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 flex items-center"> 
+                  <li class="cursor-pointer pr-[11px] rtl:pr-unset rtl:pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center"> 
                     <!-- Language Start -->
                     <div class="language-select dropdown group">
                       <button class="flex items-center max-w-[87px] min-w-[87px] md:min-w-[47px] gap-[11px]" id="language-select"><img class="w-[35px] sm:w-[30px] h-auto" src="../../assets/images/flag/en.svg" alt="flag"><span class="flex items-center gap-1 text-lg font-bold 4xl:text-base dark:text-white md:hidden">En</span>
@@ -751,7 +751,7 @@
               </button>
             </div>
             <div class="search-wrapper">
-              <div class="search-box">
+              <div class="search-box"> 
                 <input class="search" placeholder="Search" type="search">
                 <svg class="w-5 h-5"> 
                   <use href="../../assets/svg/sprite.svg#Search"> </use>
@@ -759,9 +759,9 @@
               </div>
             </div>
             <nav class="sidebar-main"> 
-              <ul class="sidebar-links custom-scroll">
+              <ul class="sidebar-links custom-scroll"> 
                 <li class="title">General</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Home"> </use>
                       </svg><span class="sidebar-name">Dashboards</span></span>
@@ -772,12 +772,12 @@
                     <li> <a href="./index.html">Unique</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
                       </svg><span class="sidebar-name">Widgets</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
                       </svg><span class="sidebar-name">Page layout</span></span>
@@ -791,7 +791,7 @@
                   </ul>
                 </li>
                 <li class="title">Components</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Folder"> </use>
                       </svg><span class="sidebar-name">Ui Kits</span></span>
@@ -812,7 +812,7 @@
                     <li> <a href="./typography.html">Typography</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Ticket-Star"> </use>
                       </svg><span class="sidebar-name">Bonus Ui</span></span>
@@ -835,7 +835,7 @@
                     <li> <a href="./tabs.html">Tabs</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Info-Square"> </use>
                       </svg><span class="sidebar-name">Icons</span></span>
@@ -848,18 +848,18 @@
                     <li> <a href="./iconly.html">Iconly</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="apex-chart.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="apex-chart.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Chart"> </use>
                       </svg><span class="sidebar-name">Apex Chart</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="wow-animation.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="wow-animation.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Video"> </use>
                       </svg><span class="sidebar-name">Wow Animation</span></span></a>
                 </li>
                 <li class="title">Applications</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Chat"> </use>
                       </svg><span class="sidebar-name">Chat</span></span>
@@ -871,12 +871,12 @@
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="calendar.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="calendar.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Calendar"> </use>
                       </svg><span class="sidebar-name">Calendar</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Bag"> </use>
                       </svg><span class="sidebar-name">Ecommerce</span></span>
@@ -895,22 +895,22 @@
                     <li> <a href="wishlist.html">Wishlist</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="email.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="email.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Message"> </use>
                       </svg><span class="sidebar-name">Email</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="kanban-board.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="kanban-board.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Paper"> </use>
                       </svg><span class="sidebar-name">Kanban Board</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="todo.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="todo.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Time-Circle"> </use>
                       </svg><span class="sidebar-name">Todo</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#2-User"> </use>
                       </svg><span class="sidebar-name">User</span></span>
@@ -923,7 +923,7 @@
                   </ul>
                 </li>
                 <li class="title">Forms &amp; Table</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Paper"> </use>
                       </svg><span class="sidebar-name">Forms</span></span>
@@ -938,13 +938,13 @@
                     <li> <a href="./switch.html">Switch</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="table.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="table.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
                       </svg><span class="sidebar-name">Tables</span></span></a>
                 </li>
                 <li class="title">Pages</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Folder"> </use>
                       </svg><span class="sidebar-name">Other Pages</span></span>
@@ -961,13 +961,13 @@
                     <li> <a href="./reset-password.html">Reset Password</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="sample-page.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="sample-page.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Paper"> </use>
                       </svg><span class="sidebar-name">Sample Page</span></span></a>
                 </li>
                 <li class="title">Miscellaneous</li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Folder"> </use>
                       </svg><span class="sidebar-name">Blog</span></span>
@@ -979,12 +979,12 @@
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="knowledgebase.html"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="knowledgebase.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Scan"> </use>
                       </svg><span class="sidebar-name">Knowledgebase</span></span></a>
                 </li>
-                <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
+                <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Location"> </use>
                       </svg><span class="sidebar-name">Map</span></span>
@@ -1600,13 +1600,13 @@
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
             <ul class="flex flex-col gap-7 mode-event">
-              <li>
+              <li> 
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
                 </div>
                 <div class="mt-2">
                   <ul class="flex items-center gap-3 flex-wrap"> 
-                    <li class="relative"> 
+                    <li class="relative">
                       <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                       <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
                     </li>
