--- a/assets/pug/pages/template/index.pug
+++ b/assets/pug/pages/template/index.pug
@@ -82,7 +82,7 @@ html(lang='en')
                     div.card-body
                       +product-list(ADVERTISE_CARD)
             div.col-span-3(class="4xl:col-span-4 lg:col-span-6 lg:-order-1 2md:col-span-12")
-              div.card 
+              div.card
                 div.card-header
                   +card-header("Audit log","setting", HISTORY_DROPDOWN)
                 div.card-body
@@ -93,25 +93,24 @@ html(lang='en')
                   +card-header("News & Update")
                 div.card-body  
                   +image-card(NEWS_UPDATE,"badge","link")
-
             div.col-span-9(class="4xl:col-span-8 lg:col-span-12")
               div.card 
                 div.card-header
                   +card-header("Users Positions","btn-group",FILTER)
-                div.card-body
+                div.card-body 
                   div.grid.grid-cols-12 
-                    div.col-span-2(class="xl:col-span-3 2md:col-span-12")
+                    div.col-span-2(class="xl:col-span-3 2md:col-span-12") 
                       ul(class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap")
                         each item in USERS_POSITIONS
-                          li
-                            button.flex.items-center.gap-2(class="justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light")
+                          li 
+                            button.flex.items-center.gap-2(class="justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2")
                               span(class=`w-[10px] bg-${item.status} h-[10px] rounded-[2px]`)
-                              span(class="text-xs font-semibold text-left line-clamp-1")= item.title 
-                    div.col-span-10(class="xl:col-span-9 2md:col-span-12")
+                              span(class="text-xs font-semibold text-left line-clamp-1 ")= item.title
+                    div.col-span-10(class="xl:col-span-9 2md:col-span-12") 
                       div#userPosition.custom-data-label.apex-custom-text(class="2md:-mt-[12px] ml-[-40px] 2md:ml-0")
             div.col-span-3(class="4xl:col-span-4 lg:col-span-12")
-              div.card  
-                div.card-header
+              div.card
+                div.card-header 
                   +card-header("Sell Overview","setting", HISTORY_DROPDOWN)
                 div.card-body
                   div#SellOverview.apex-custom-tooltip.apex-tooltip-style1(class="mb-[-15px]")
