--- a/assets/pug/components/table/hoverable-table.pug
+++ b/assets/pug/components/table/hoverable-table.pug
@@ -13,6 +13,6 @@ table.table.equal-space.table-hover
                 td(class="min-w-[1.25rem]")=index+1
                 td(class="min-w-[8.125rem]")=bodyData.name
                 td(class="min-w-[8.125rem]")=bodyData.website
-                td(class="min-w-[8.125rem]")=bodyData.company
-                td(class="min-w-[8.625rem]")=bodyData.birthday
+                td(class="min-w-[10.125rem]")=bodyData.company
+                td(class="min-w-[3.625rem]")=bodyData.country
 
