--- a/html/template/kanban-board.html
+++ b/html/template/kanban-board.html
@@ -1030,6 +1030,11 @@
               </div>
               <div class="card-body"> 
                 <div class="kanab-3 kanab-common"></div>
+                <div class="mt-8 flex items-center gap-2 flex-wrap">
+                  <button class="text-white btn btn-primary" id="addDefault">Add Default board</button>
+                  <button class="text-white btn btn-info" id="addToDo">Add element in &quot;To Do&quot; Board</button>
+                  <button class="text-white btn btn-error" id="removeBoard">Remove &quot;Done&quot; Board</button>
+                </div>
               </div>
             </div>
           </div>
