--- a/assets/pug/components/table/active-table.pug
+++ b/assets/pug/components/table/active-table.pug
@@ -4,26 +4,26 @@
 
 
 table.table.equal-space.active-table
-  thead 
-    tr
-      each userHead,index in ACTIVE_TABLE.header
-        th=  userHead
-  tbody
-    each bodyData,index in ACTIVE_TABLE.body
-      tr(class="hover:bg-gray-light dark:hover:bg-sidebar-dark2")
-        td(class="min-w-[20px]")
-          div(class="flex items-center gap-2")
-            label.checkbox(class="w-[15px] h-[15px]")
-              input(type='checkbox' class="peer"  checked=index + 1 == 2 ? true : false)
-              div.checkbox-indicator(class="bg-white peer-checked:bg-primary border-content peer-checked:border-primary")
-                i(data-feather="check")
-        td(class="min-w-[50px]")
-          h4(class="text-xs font-semibold text-title")= bodyData.userName
-        td(class="min-w-[50px]") 
-          h4(class=`text-xs font-semibold text-${bodyData.status}`)= bodyData.statusContent
-        td(class="min-w-[50px]")
-          h4(class="text-xs font-semibold text-title")= bodyData.role
-        td(class="min-w-[10px]")
-          h4(class=`text-xs font-semibold text-${bodyData.Salary}`)= bodyData.salaryContent
-        td(class="min-w-[20px]")
-          h4(class="text-xs font-semibold text-title")= bodyData.startDate          
+    thead 
+        tr
+            each userHead,index in ACTIVE_TABLE.header
+                th=  userHead
+    tbody
+        each bodyData,index in ACTIVE_TABLE.body
+            tr(class="hover:bg-gray-light dark:hover:bg-sidebar-dark2")
+                td(class="min-w-[20px]")
+                    div(class="flex items-center gap-2")
+                        label.checkbox(class="w-[15px] h-[15px]")
+                            input(type='checkbox' class="peer"  checked=index + 1 == 2 ? true : false)
+                            div.checkbox-indicator(class="bg-white peer-checked:bg-primary border-content peer-checked:border-primary")
+                                i(data-feather="check")
+                td(class="min-w-[100px]")
+                    h4(class="text-xs font-semibold text-title")= bodyData.userName
+                td(class="min-w-[100px]") 
+                    h4(class=`text-xs font-semibold text-${bodyData.status}`)= bodyData.statusContent
+                td(class="min-w-[11rem]")
+                    h4(class="text-xs font-semibold text-title")= bodyData.role
+                td(class="min-w-[30px]")
+                    h4(class=`text-xs font-semibold text-${bodyData.Salary}`)= bodyData.salaryContent
+                td(class="min-w-[120px]")
+                    h4(class="text-xs font-semibold text-title")= bodyData.teamLeader          
