--- a/assets/pug/components/table/colors-table.pug
+++ b/assets/pug/components/table/colors-table.pug
@@ -11,7 +11,7 @@ table.table.table-Color.table-bordered
     each bodyData,index in COLORS_TABLE.body
       tr
         td(class="min-w-[.625rem]")=index+1
-        td(class="min-w-[.625rem]")=bodyData.employee
-        td(class="min-w-[1.25rem]")=bodyData.date
-        td(class="min-w-[.625rem]")=bodyData.status
+        td(class="min-w-[13rem]")=bodyData.employee
+        td(class="min-w-[11rem]")=bodyData.date
+        td(class="min-w-[9rem]")=bodyData.status
         td(class="min-w-[.625rem]")=bodyData.performance
