--- a/assets/pug/components/table/default-variants.pug
+++ b/assets/pug/components/table/default-variants.pug
@@ -11,6 +11,6 @@ table.table(class="table-bordered table-variant ")
     each bodyData,index in DEFAULT_VARIANTS.body
       tr
         td(class="min-w-[11.125rem]")=bodyData.id
-        td(class="min-w-[11.125rem]")=bodyData.name
-        td(class="min-w-[11.125rem]")=bodyData.position
-        td(class="min-w-[.625rem]")=bodyData.department  
+        td(class="min-w-[13.5rem]")=bodyData.name
+        td(class="min-w-[15rem]")=bodyData.position
+        td(class="min-w-[18.25rem]")=bodyData.department  
